MCA Dev/src/objects/DfaGrid__mdt.object
<CustomObject>
    <fields>
        <fullName>Display_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EditAll_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EditAll Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <label>Tab Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <label>sObject Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DfaGrid</label>
    <pluralLabel>DfaGrid</pluralLabel>
</CustomObject>